Added BCards for Subbarao, Rajesh, Venkat

--- a/bcards/rajesh.html
+++ b/bcards/rajesh.html
@@ -153,7 +153,7 @@ var date = {"months":["January","February","March","April","May","June","July","
 <ul class="profile-list">
 	<li class="clearfix">
 		<strong class="title">Company</strong>
-		<span class="cont">GOWRISANKAR</span>
+		<span class="cont">GowriSankar Agencies</span>
 	</li>
 <li class="clearfix">
 <strong class="title">Designation</strong>
@@ -167,6 +167,10 @@ var date = {"months":["January","February","March","April","May","June","July","
 <strong class="title">E-mail</strong>
 <span class="cont"><a  class="__cf_email__" >gowrisankaragencies381@gmail.com</a></span>
 </li>
+<li class="clearfix">
+	<strong class="title">Organaizations</strong>
+	<span class="cont">Member of BNI (Cents)</a></span>
+	</li>
 <!-- <li class="clearfix">
 	<strong class="title">Current Positions</strong>
 	<span class="cont">
@@ -342,10 +346,7 @@ suspensions. Talk to us to make your travel more smoother.
 	<div class="animate-up">
 	<h2 class="section-title">Authorised Dealers For</h2>
 	<div class="section-box bgWhite" style="display: flex; justify-content: center;">
-		<!-- <object data="../Portfolio/Magsmen portfolio new.pdf" type="application/pdf" width="100%" height="500px" style="margin-bottom: 0;">
-			<embed src="../Portfolio/Magsmen portfolio new.pdf" type="application/pdf" style="overflow: hidden;">
-				</embed>
-		</object> -->
+
 	<div >
 		<img src="images/ford-logo.jpg" class="p-logo">
 		<img src="images/Hyundai.jpg" class="p-logo">
@@ -354,161 +355,11 @@ suspensions. Talk to us to make your travel more smoother.
 			<img src="images/MaruthiSuzuki.jpg" class="p-logo">
 			<img src="images/Toyota.jpg" class="p-logo">
 	</div>
-	<!-- <div style="border-bottom: 5px dotted black; margin: 10px 0;"></div>
 	
-	<div>
-		<img src="images/fortuner.jpg" class="p-img">
-		<img src="images/geniune-parts.jpg" class="p-img">
-	</div> -->
 	</div>
 	</div>
 	</section>
-<!-- <section id="experience" class="section section-experience">
-	<div class="animate-up">
-<h2 class="section-title">Clients</h2>
-<div class="timeline">
-<div class="timeline-bar"></div>
-<div class="timeline-inner clearfix">
-<div class="timeline-box timeline-box-left">
-<span class="dot"></span>
-<div class="timeline-box-inner animate-right bgWhite">
-<span class="arrow"></span>
-<div class="timeline-head">
 
-<img src="../images/client-logos/hasbox.png" alt="" class="client-img">
-<h4>The #box</h4>
-</div>
-<p>Currently, the branding and marketing partner, takes care of the complete offline and online promotional planning for the brand.</p>
-</div>
-</div>
-<div class="timeline-box timeline-box-right">
-<span class="dot"></span>
-<div class="timeline-box-inner animate-left bgWhite">
-<span class="arrow"></span>
-<div class="timeline-head">
-<img src="../images/client-logos/I 9 black.png" alt=""  class="client-img">
-<h4>I9</h4>
-</div>
-<p>Redesigned logo for the famous i9 builders and developers.</p>
-</div>
-</div>
-<div class="timeline-box timeline-box-left">
-<span class="dot"></span>
-<div class="timeline-box-inner animate-right bgWhite">
-<span class="arrow"></span>
-<div class="timeline-head">
-<img src="../images/client-logos/ideabox.png" alt=""  class="client-img">
-<h4>Idea box</h4>
-</div>
-<p>A subsidary of Rootcap Consultants, developed storytheme video and corporate flyers.</p>
-</div>
-</div>
-<div class="timeline-box timeline-box-right">
-<span class="dot"></span>
-<div class="timeline-box-inner animate-left bgWhite">
-<span class="arrow"></span>
-<div class="timeline-head">
-<img src="../images/client-logos/integrity_global_services.png" alt=""  class="client-img">
-<h4>IGS</h4>
-</div>
-<p>Branding partner for the 6 months. Takes care of complete branding and marketing division of the business.</p>
-</div>
-</div>
-<div class="timeline-box timeline-box-left">
-<span class="dot"></span>
-<div class="timeline-box-inner animate-right bgWhite">
-<span class="arrow"></span>
-<div class="timeline-head">
-<img src="../images/client-logos/kamadenu.png" alt=""  class="client-img">
-<h4>Kamadhenu</h4>
-</div>
-<p>Designed stunning hand crafted logo for kamadhenu Uniforms.</p>
-</div>
-</div>
-<div class="timeline-box timeline-box-right">
-<span class="dot"></span>
-<div class="timeline-box-inner animate-left bgWhite">
-<span class="arrow"></span>
-<div class="timeline-head">
-<img src="../images/client-logos/nikith.png" alt=""  class="client-img">
-<h4>Nikith Marketing</h4>
-</div>
-<p>Developed various strategic posters for the brand.</p>
-</div>
-</div>
-<div class="timeline-inner clearfix">
-	<div class="timeline-box timeline-box-left">
-	<span class="dot"></span>
-	<div class="timeline-box-inner animate-right bgWhite">
-	<span class="arrow"></span>
-	<div class="timeline-head">
-	<img src="../images/client-logos/rootcap.png" alt=""  class="client-img">
-	<h4>Rootcap Business consultants</h4>
-	</div>
-	<p>One of our best videos developed and exclusively planned to communicate what exactly they do. Also, developed corporate flyers.</p>
-	</div>
-	</div>
-	<div class="timeline-box timeline-box-right">
-	<span class="dot"></span>
-	<div class="timeline-box-inner animate-left bgWhite">
-	<span class="arrow"></span>
-	<div class="timeline-head">
-	<img src="../images/client-logos/workmen.png" alt=""  class="client-img">
-	<h4>workmen</h4>
-	</div>
-	<p>Crafted impeccable Logo design and dynamic website.</p>
-	</div>
-	</div>
-	<div class="timeline-box timeline-box-left">
-	<span class="dot"></span>
-	<div class="timeline-box-inner animate-right bgWhite">
-	<span class="arrow"></span>
-	<div class="timeline-head">
-	<img src="../images/client-logos/apcotton.png" alt=""  class="client-img">
-	<h4>AP Cotton</h4>
-	</div>
-	<p>Handcrafted logo with stunning design for AP Cotton.</p>
-	</div>
-	</div>
-	<div class="timeline-box timeline-box-right">
-	<span class="dot"></span>
-	<div class="timeline-box-inner animate-left bgWhite">
-	<span class="arrow"></span>
-	<div class="timeline-head">
-	<img src="../images/client-logos/bakerydelights.png" alt=""  class="client-img">
-	<h4>BAKERY delights</h4>
-	</div>
-	<p>Developed stunning and playful menu for the exotic bakery in guntur.</p>
-	</div>
-	</div>
-	<div class="timeline-box timeline-box-left">
-	<span class="dot"></span>
-	<div class="timeline-box-inner animate-right bgWhite">
-	<span class="arrow"></span>
-	<div class="timeline-head">
-	<img src="../images/client-logos/bni.png" alt="" class="client-img">
-	<h4>BNI GUNTUR</h4>
-	</div>
-	<p>Designed amazing videos for the 5th chapter BNI eons launch and many videos for the collaborations.</p>
-	</div>
-	</div>
-	<div class="timeline-box timeline-box-right">
-	<span class="dot"></span>
-	<div class="timeline-box-inner animate-left bgWhite">
-	<span class="arrow"></span>
-	<div class="timeline-head">
-	<img src="../images/client-logos/coastal_logo.png" alt="" class="client-img">
-	<h4>COASTAL</h4>
-	</div>
-	<p>
-		Carefully designed handcrafted logo for Coastal.
-	</p>
-	</div>
-	</div>
-</div>
-</div>
-</div>
-</section> -->
   <section id="contact" class="section section-contact"><div class="animate-up animated">
 	<h2 class="section-title">Contact Us</h2>
 	<div class="row align-center">
@@ -533,9 +384,14 @@ suspensions. Talk to us to make your travel more smoother.
 	<label>Subject</label>
 	</div>
 	<div class="input-field">
+		<input class="contact-phone-number" type="text" name="phone-number"><span class="line"></span>
+		<label>Phone number</label>
+		</div>
+	<div class="input-field">
 	<textarea class="contact-message" rows="4" name="message"></textarea><span class="line"></span>
 	<label>Message</label>
-	</div><div class="g-recaptcha" data-theme="light" data-sitekey="" id="recaptcha1"></div>
+	</div>
+	<div class="g-recaptcha" data-theme="light" data-sitekey="" id="recaptcha1"></div>
 	<span class="btn-outer btn-primary-outer ripple bgGray">
 	<input class="contact-submit btn btn-lg btn-primary" type="submit" value="Send"></span>
 	<div class="contact-response"></div>
@@ -587,7 +443,7 @@ suspensions. Talk to us to make your travel more smoother.
 		var c = document.body.className;
 		c = c.replace(/woocommerce-no-js/, 'woocommerce-js');
 		document.body.className = c;
-	</script><script type="text/javascript" src="js/js-contact-form.js" id="contact-form-js"></script><script type="text/javascript" src="js/jquery-blockui-jquery.blockUI.min.js" id="jquery-blockui-js"></script><script type="text/javascript" id="wc-add-to-cart-js-extra">
+	</script><script type="text/javascript" src="js/js-contact-form-rajesh.js" id="contact-form-js"></script><script type="text/javascript" src="js/jquery-blockui-jquery.blockUI.min.js" id="jquery-blockui-js"></script><script type="text/javascript" id="wc-add-to-cart-js-extra">
 /* <![CDATA[ */
 var wc_add_to_cart_params = {"ajax_url":"\/startuper\/wp-admin\/admin-ajax.php","wc_ajax_url":"\/startuper\/?wc-ajax=%%endpoint%%","i18n_view_cart":"View cart","cart_url":"https:\/\/rscard.px-lab.com\/startuper\/cart\/","is_cart":"","cart_redirect_after_add":"no"};
 /* ]]> */
