--- a/index.html
+++ b/index.html
@@ -963,8 +963,8 @@ and (orientation : landscape) {
 
         <div class="row section-header narrow" >
             <div class="col-full">
-                <h3 class="subhead">Ready to get Started !</h3>
-                <h2 class="display-2">Feel free to contact us for any <br> Project idea or collaboration</h2>
+                <h3 class="subhead">KEEP IN TOUCH !</h3>
+                <h2 class="display-2">Lets Work Together</h2>
             </div>
         </div> <!-- end section-header -->
         <div class="row contact-main" >
