--- a/bcards/venkat.html
+++ b/bcards/venkat.html
@@ -188,11 +188,11 @@ var date = {"months":["January","February","March","April","May","June","July","
 </div>
 <div class="profile-social">
 <ul class="social">
-<li><a href="https://www.facebook.com/venkatchowdary.gonuguntla.5" target="_blank"><i class="rsicon rsicon-facebook"></i></a></li>
+<li><a href="https://www.facebook.com/Integrity-Global-Services-121883379721661/" target="_blank"><i class="rsicon rsicon-facebook"></i></a></li>
 <!-- <li><a href="https://www.linkedin.com/in/sandeepnamburu" target="_blank"><i class="rsicon rsicon-linkedin"></i></a></li> -->
 <li><a href="https://instagram.com/integrityglobalservices?igshid=oecxrflog6rw" target="_blank"><i class="rsicon rsicon-instagram"></i></a></li>
 <!-- <li><a href="https://www.youtube.com/channel/UCG3agq3IYZmQifQeM2xFNbQ" target="_blank"><i class="rsicon rsicon-youtube"></i></a></li> -->
-<li><a href="https://www.google.com/search?q=integrity+global+servicees&oq=integrity+global+servicees&aqs=chrome..69i57j46i13i175i199j0i13i30j0i8i13i30l2.6761j0j15&sourceid=chrome&ie=UTF-8" target="_blank"><i class="rsicon rsicon-map-marker"></i></a></li>
+<li><a href="https://goo.gl/maps/fQ7wuMdzaYcsbWQK9" target="_blank"><i class="rsicon rsicon-map-marker"></i></a></li>
 </ul></div>
 </div>
 <div class="section-txt-btn">
@@ -340,11 +340,11 @@ Download Resume </a></p> -->
 </div>
 <footer class="footer" style="background-color: black;"><div class="footer-social">
 <ul class="social">
-<li><a href="https://www.facebook.com/venkatchowdary.gonuguntla.5" target="_blank"><i class="rsicon rsicon-facebook"></i></a></li>
+<li><a href="https://www.facebook.com/Integrity-Global-Services-121883379721661/" target="_blank"><i class="rsicon rsicon-facebook"></i></a></li>
 <!-- <li><a href="https://www.linkedin.com/in/sandeepnamburu" target="_blank"><i class="rsicon rsicon-linkedin"></i></a></li> -->
 <li><a href="https://instagram.com/integrityglobalservices?igshid=oecxrflog6rw" target="_blank"><i class="rsicon rsicon-instagram"></i></a></li>
 <!-- <li><a href="https://www.youtube.com/channel/UCG3agq3IYZmQifQeM2xFNbQ" target="_blank"><i class="rsicon rsicon-youtube"></i></a></li> -->
-<li><a href="https://www.google.com/search?q=integrity+global+servicees&oq=integrity+global+servicees&aqs=chrome..69i57j46i13i175i199j0i13i30j0i8i13i30l2.6761j0j15&sourceid=chrome&ie=UTF-8" target="_blank"><i class="rsicon rsicon-map-marker"></i></a></li>
+<li><a href="https://goo.gl/maps/fQ7wuMdzaYcsbWQK9" target="_blank"><i class="rsicon rsicon-map-marker"></i></a></li>
 </ul></div>
 </footer>
 </div>
