--- a/bcards/vijaykrishna.html
+++ b/bcards/vijaykrishna.html
@@ -93,7 +93,7 @@ var date = {"months":["January","February","March","April","May","June","July","
 	<ul class="clearfix">
 	<li id="menu-item-468" class="menu-item menu-item-type-custom menu-item-object-custom current-menu-item current_page_item menu-item-home"><a href="#about">About</a></li>
 	<li id="menu-item-470" class="menu-item menu-item-type-custom menu-item-object-custom current-menu-item current_page_item menu-item-home"><a href="#portfolio">Gallery</a></li>
-	<li id="menu-item-470" class="menu-item menu-item-type-custom menu-item-object-custom current-menu-item current_page_item menu-item-home"><a href="#services">services</a></li>
+	<!-- <li id="menu-item-470" class="menu-item menu-item-type-custom menu-item-object-custom current-menu-item current_page_item menu-item-home"><a href="#services">services</a></li> -->
 
 	<!-- <li id="menu-item-474" class="menu-item menu-item-type-custom menu-item-object-custom current-menu-item current_page_item menu-item-home current-menu-ancestor current-menu-parent menu-item-has-children"><a href="#experience">clients</a></li> -->
 	<li id="menu-item-472" class="menu-item menu-item-type-custom menu-item-object-custom current-menu-item current_page_item menu-item-home"><a href="#contact">Contact</a></li>
@@ -124,7 +124,7 @@ var date = {"months":["January","February","March","April","May","June","July","
 	<li id="menu-item-470" class="menu-item menu-item-type-custom menu-item-object-custom current-menu-item current_page_item menu-item-home"><a href="#portfolio">Gallery</a></li>
 	<!-- <li id="menu-item-474" class="menu-item menu-item-type-custom menu-item-object-custom current-menu-item current_page_item menu-item-home current-menu-ancestor current-menu-parent menu-item-has-children"><a href="https://rscard.px-lab.com/startuper/#experience">Clients</a><span class="rsicon rsicon-chevron-down"></span>
 	</li> -->
-	<li id="menu-item-470" class="menu-item menu-item-type-custom menu-item-object-custom current-menu-item current_page_item menu-item-home"><a href="#services">services</a></li>
+	<!-- <li id="menu-item-470" class="menu-item menu-item-type-custom menu-item-object-custom current-menu-item current_page_item menu-item-home"><a href="#services">services</a></li> -->
 	<li id="menu-item-472" class="menu-item menu-item-type-custom menu-item-object-custom current-menu-item current_page_item menu-item-home"><a href="#contact">Contact</a></li>
 	
 	</ul></nav></div>
