--- a/bcards/subbarao.html
+++ b/bcards/subbarao.html
@@ -107,7 +107,7 @@ var date = {"months":["January","February","March","April","May","June","July","
 </div>
 <div class="wrapper" style="background-color: black;">
 <header class="header">
-<div class="head-bg" style="background-image: url('../images/hero-bg.jpg') !important"></div>
+<div class="head-bg" style="background-image: url('../bcards/images/cotton-flowers-min.jpg') !important; height: 340px;"></div>
 <div class="head-bar has-woo has-sidebar head-sticky-classic">
 	<div class="head-bar-inner">
 	<div class="row">
@@ -161,16 +161,16 @@ var date = {"months":["January","February","March","April","May","June","July","
 <strong class="title">E-mail</strong>
 <span class="cont">
 	<a  class="__cf_email__" >sraonamburu@gmail.com</a><br>
-	<a class="__cf_email__">secretarygaap@gmail.com</a>
+	<a class="__cf_email__">jayacottonproducts@gmail.com</a>
 </span>
 </li>
 <li class="clearfix">
 	<strong class="title">Current Positions</strong>
 	<span class="cont">
 		<ul>
-			<li>Joint Secretary at Jaya Cotton Products (1983- Present)</li>
-			<li>Gymnastics Federatio of India (2019- Present)</li>
-			<li>Gymnastics Assocation of Andhra Pradesh (2014- Present)</li>
+			<li>Managing Partner at Jaya Cotton Products (1983- Present)</li>
+			<li>Joint Secretary of Gymnastics Federation of India (2019- Present)</li>
+			<li>Gymnastics Association of Andhra Pradesh (2014- Present)</li>
 			<li>Joint Secretary Andhra Pradesh Olympic Association (2018- Present)</li>
 			<li>Joint Secretary Andhra Pradesh Cotton Association (2014- Present)</li>
 		</ul>
@@ -210,13 +210,13 @@ took the association to the next level..</p>
 	<ul style="color: #ffffff;">
 		<li style="margin-bottom: 10px;">First Gold medalist for Acharya Nagarjuna
 			university in All india Inter-University
-			tournaments held at Gujrat.</li>
+			tournaments held at Gujrat</li>
 			<li style="margin-bottom: 10px;">Achieved various medals at state and National
 				tournaments in Gymnastics for
 				Andhra Pradesh</li>
 				<li style="margin-bottom: 10px;">Participated and achieved various medals in
 					school games in Gymnastics</li>
-					<li>Awarded as the best student of the year 1982 from National institute of sports, Patiala</li>
+					<li>Awarded as the best student of the year 1982 from National institute of sports, Patiala.</li>
 	</ul>
 	</div>
 	</div>
