Rajesh icons change

--- a/bcards/rajesh.html
+++ b/bcards/rajesh.html
@@ -273,7 +273,7 @@ requirements in time, every time.</p>
 
 <div class="col-sm-4">
 <div class="service">
-<div class="service-icon"><i class="rsicon rsicon-car"></i></div>
+<div class="service-icon"><i class="rsicon rsicon-plug"></i></div>
 <h3 class="service-title">Electrical</h3>
 <div class="service-cont">
 <hr><p>A spark in your car must always be resolved, don't let it damage
@@ -284,7 +284,7 @@ requirements in time, every time.</p>
 </div>
 <div class="col-sm-4">
 	<div class="service">
-	<div class="service-icon"><i class="rsicon rsicon-car"></i></div>
+	<div class="service-icon"><i class="rsicon rsicon-odnoklassniki"></i></div>
 	<h3 class="service-title">Engine</h3>
 	<div class="service-cont">
 	<hr><p>
@@ -303,7 +303,7 @@ requirements in time, every time.</p>
 
 <div class="col-sm-4">
 <div class="service">
-<div class="service-icon"><i class="rsicon rsicon-car"></i></div>
+<div class="service-icon"><i class="rsicon rsicon-wrench"></i></div>
 <h3 class="service-title">Auto Maintenance Services</h3>
 <div class="service-cont">
 <hr><p>
@@ -315,7 +315,7 @@ place to buy all types of important car parts at great prices.
 </div>
 <div class="col-sm-4">
 	<div class="service">
-	<div class="service-icon"><i class="rsicon rsicon-car"></i></div>
+	<div class="service-icon"><i class="rsicon rsicon-universal-access"></i></div>
 	<h3 class="service-title">Breaks</h3>
 	<div class="service-cont">
 	<hr><p>Getting home safe is where breaks come to point. Breaks are to be
@@ -327,7 +327,7 @@ place to buy all types of important car parts at great prices.
 	</div>
 <div class="col-sm-4">
 	<div class="service">
-	<div class="service-icon"><i class="rsicon rsicon-car"></i></div>
+	<div class="service-icon"><i class="rsicon rsicon-sliders"></i></div>
 	<h3 class="service-title">Suspension</h3>
 	<div class="service-cont">
 	<hr><p>
